<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            android:src="@drawable/banner" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="20dp"
            android:background="@android:color/black"
            android:text="@string/startListeningToMusic"
            android:textColor="@android:color/white" />

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button_jazz"
                    style="@style/ButtonStyle"
                    android:background="@drawable/jazz"
                    android:text="@string/jazz"
                    android:contentDescription="@string/playJazz" />

                <Button
                    android:id="@+id/button_rock"
                    style="@style/ButtonStyle"
                    android:background="@drawable/rock"
                    android:text="@string/rock"
                    android:contentDescription="@string/playRock"/>

                <Button
                    android:id="@+id/button_hiphop"
                    style="@style/ButtonStyle"
                    android:background="@drawable/hiphop"
                    android:text="@string/hiphop"
                    android:contentDescription="@string/playHiphop" />

                <Button
                    android:id="@+id/button_pop"
                    style="@style/ButtonStyle"
                    android:background="@drawable/pop"
                    android:text="@string/pop"
                    android:contentDescription="@string/playPop"/>

            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>
</ScrollView>